// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton renders Skeleton correctly 1`] = `
<div
  class="sc-aXZVg lnRmZL sc-gEvEer sc-eqUAAy bKpMEM ccysJl"
>
  <div
    style="height: 40px; width: 40px; background-color: red;"
  />
  ,
  <div
    style="height: 40px; width: 40px; background-color: green;"
  />
  ,
  <div
    style="height: 40px; width: 40px; background-color: blue;"
  />
</div>
`;

exports[`Skeleton renders SkeletonCircle correctly 1`] = `
<div
  class="sc-aXZVg kITBOQ sc-gEvEer sc-fqkvVR bKpMEM cZrsqm"
/>
`;

exports[`Skeleton renders SkeletonText correctly 1`] = `
<div
  class="sc-aXZVg ewrLIs sc-gEvEer sc-dcJsrY bKpMEM elNStC"
/>
`;
